# scylladb

./: .gitignore  configure.py  main.cc  query.cc  test.py
cql3/: query_processor.cc
cql3/restrictions/: statement_restrictions.cc
cql3/statements/: select_statement.cc
db/: CMakeLists.txt  virtual_tables.cc
master/: .buildinfo  contribute.html  faq.html  genindex.html  index.html  search.html  sitemap.xml
master/.doctrees/: contribute.doctree  environment.pickle  faq.doctree  index.doctree
master/alternator/: alternator.html  compatibility.html  getting-started.html  new-apis.html
master/architecture/: architecture-fault-tolerance.html  console-CL-full-demo.html  index.html  raft.html  tablets.html  zero-token-nodes.html
master/cql/: appendices.html  compaction.html  consistency-calculator.html  consistency.html  cql-extensions.html  cqlsh.html  ddl.html  definitions.html  describe-schema.html  dml.html  functions.html  index.html  json.html  mv.html  non-reserved-keywords.html  reserved-keywords.html  secondary-indexes.html  service-levels.html  time-to-live.html  types.html  wasm.html
master/features/: counters.html  index.html  local-secondary-indexes.html  lwt.html  materialized-views.html  (+3 more)
rust/: CMakeLists.txt  Cargo.toml
rust/quic/: Cargo.toml
rust/quic/src/: lib.rs
rust/src/: lib.rs
service/: storage_proxy.cc  vector_store.cc  vector_store.hh  vector_store_client.cc  vector_store_client.hh
test/vector_search_validator/: Cargo.toml  Cargo.toml.old  README.md  build-env  cargo-toml-template  conftest.py  run-validator  test_validator.py
(+793 files in other folders)
