[package]
name = "quic"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = { version = "1.0.83", features = ["c++20"] }
quiche = { version = "0.23.2", default-features = false, features = ["openssl"] }
#quiche = "0.23.2"
