## Copyright 2025-present ScyllaDB
# SPDX-License-Identifier: LicenseRef-ScyllaDB-Source-Available-1.0

[workspace]
members = ["/home/pawel/proj/scylladb/test/vector_search_validator/crates/*"]
default-members = ["/home/pawel/proj/scylladb/test/vector_search_validator/crates/validator"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.97"
futures = "0.3.31"
scylla = { version = "1.2.0", features = ["time-03"] }
tokio = { version = "1.44.1", features = ["full"] }
tracing = "0.1.41"
uuid = "1.16.0"
vector-search-validator-engine = { git = "https://github.com/ewienik/vector-store.git", rev = "9bb192f7c0860ae4a42d1f566a8ea8ebd8a144d7" }
vector-search-validator-tests = { git = "https://github.com/ewienik/vector-store.git", rev = "9bb192f7c0860ae4a42d1f566a8ea8ebd8a144d7" }

[patch.'https://github.com/ewienik/vector-store.git']
vector-search-validator-scylla = { path = "/home/pawel/proj/scylladb/test/vector_search_validator/crates/validator-scylla" }
